--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,3 +11,8 @@ en:
       ImageProjectContent: imagem
       YoutubeProjectContent: YouTube
       VimeoProjectContent: Vimeo
+
+  helpers:
+    submit:
+      contact_form:
+        create: 'Send'
